# ortools-exercices

./: README.md
magicsquare/: main.py  pyproject.toml
nqueens/: main.py  pyproject.toml
simple/: main.py  pyproject.toml
